# Face-Recongition-Gui

./: Attendance.csv  README.md  Recognition.py  Today_Attendance.csv  final.py  pyproject.toml  requirements.txt
DataSets/: Employees.csv  credential.txt
face_recognition_ref/: Recognition.py  application_main.py  attendance.csv
tests/: test.py
