
[tool.poetry]
name = "midtermproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandastable = "^0.13.0"
pandas = "^1.4.2"
cmake = "^3.22.4"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
face-recognition = "^1.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
